force-app/main/default/objects/Question_Library__c/Question_Library__c.object-meta.xml
<CustomObject>
    <label>Question Library</label>
    <nameField>
        <displayFormat>QL-{000}</displayFormat>
        <label>Question Library</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions Library</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>