force-app/main/default/objects/Question_Library__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>used for QL external reference</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>