force-app/main/default/objects/Question_Library__c/fields/QL_DM_Key__c.field-meta.xml
<CustomField>
    <fullName>QL_DM_Key__c</fullName>
    <externalId>true</externalId>
    <label>QL DM Key</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>