force-app/main/default/objects/Question_Library__c/fields/QL_Number__c.field-meta.xml
<CustomField>
    <fullName>QL_Number__c</fullName>
    <displayFormat>QL-{000}</displayFormat>
    <label>QL Number</label>
    <type>AutoNumber</type>
</CustomField>