force-app/main/default/objects/Question_Library__c/fields/Question_Category__c.field-meta.xml
<CustomField>
    <fullName>Question_Category__c</fullName>
    <label>Question Category</label>
    <referenceTo>Question_Category__c</referenceTo>
    <relationshipLabel>Questions Library</relationshipLabel>
    <relationshipName>Questions_Library</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>