force-app/main/default/objects/Question_Library__c/fields/Response_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Data_Type__c</fullName>
    <label>Response Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Input</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>password</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>Radio Yes/No</fullName>
            </value>
            <value>
                <fullName>Check Box</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>