force-app/main/default/objects/Question_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Category__c</columns>
    <columns>Question__c</columns>
    <columns>Response_Data_Type__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>